--- a/pages/le_ceneri.html
+++ b/pages/le_ceneri.html
@@ -34,7 +34,7 @@
 			</a>
 		</div>
 		<div class="grid-item">
-			<a href="../lr11.html">
+			<a href="../index.html">
 				<h1>Back</h1>
 			</a>
 		</div>
