--- a/pages/nos_chants_perdus.html
+++ b/pages/nos_chants_perdus.html
@@ -33,7 +33,7 @@
 			<h1><a href="https://music.apple.com/ru/album/nos-chants-perdus/949442965">Buy</a></h1>
 		</div>
 		<div class="grid-item">
-			<h1><a href="../lr11.html">Back</a></h1>
+			<h1><a href="../index.html">Back</a></h1>
 		</div>
 		</div>
 </body>
