--- a/pages/the_world_of_disbelief.html
+++ b/pages/the_world_of_disbelief.html
@@ -32,7 +32,7 @@
 			</a>
 		</div>
 		<div class="grid-item">
-			<a href="../lr11.html">
+			<a href="../index.html">
 				<h1>Back</h1>
 			</a>
 		</div>
