--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>fl2</title>
+	<title>LR_11</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/lr11.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap" rel="stylesheet"> 
@@ -93,9 +93,6 @@
 				<img class="image" src="images/music_images/hitparade.jpg">
 		</div>	
 	</div>
-	<div class="top"><h1>Бандера продакшн</h1><p>aljfasdkhasfk;la
-	фівдлфіалофів
- афілавфівофжл ф
- фіалфжіова</p></div>	
+	<div class="top"><h1>#CANT_KILL_PROGRESS</div>	
 </body>
 </html>
