Added le vergini folli album

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 				<img class="image" src="images/music_images/s4hd.jpg">
 		</div>
 		<div class="grid-item container">
-			<div class="overlay">
-				<div class="text">link</div>
-			</div>
+			<a href="pages/le_vergini_folli.html"><div class="overlay">
+				<div class="text">Details</div>
+			</div></a>
 				<img class="image" src="images/music_images/lvf.jpg">
 		</div>
 		<div class="grid-item container">
