--- a/index.html
+++ b/index.html
@@ -1,98 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>LR_11</title>
+	<title>LR_HQ</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/lr11.css">
+	<link rel="stylesheet" type="text/css" href="css/lrhq.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap" rel="stylesheet"> 
 </head>
 <body>
-	<div class="top"><h1>Музичний магазин</h1></div>	
+	<div class="top"><h1>LR_HQ</h1></div>	
 	<div class="grid">
-		<div class="grid-item container">
-			<a href="pages/the_world_of_disbelief.html">
-				<div class="overlay">
-					<div class="text">Details</div>
-				</div></a>
-				<img class="image" src="images/music_images/world_disb.jpg">
-		</div>
-		
-		<div class="grid-item container">
-			<a href="https://uk.wikipedia.org/wiki/%D0%91%D0%B0%D0%BD%D0%B4%D0%B5%D1%80%D0%B0_%D0%A1%D1%82%D0%B5%D0%BF%D0%B0%D0%BD_%D0%90%D0%BD%D0%B4%D1%80%D1%96%D0%B9%D0%BE%D0%B2%D0%B8%D1%87"><div class="overlay">
-				<div class="text">Не зовсім музика</div>
-			</div></a>
-				<img src="images/hero_of_nation.jpg" class="image">
-		</div>
-		
-		<div class="grid-item container">
-			<a href="pages/nos_chants_perdus.html">
-				<div class="overlay">
-				<div class="text">Details</div>
+		<a href="LR_11/index.html"><div class="grid-item">
+			<h1>LR 11</h1>
+		</div></a>
+		<a href="">
+			<a href="JS_LRs/js_collection.html">
+				<div class="grid-item">
+					<h1>JS collection</h1>
 				</div>
 			</a>
-			<img class="image" src="images/music_images/nos_chants_perdus.jpeg"></img>
-		</div>
-
-		<div class="grid-item container">
-			<div class="overlay">
-				<div class="text">link</div>
-			</div>
-				<img class="image" src="images/music_images/rr_casino.jpg"></img>
-		</div>
-		
-		<div class="grid-item container">
-			<div class="overlay">
-				<div class="text">link</div>
-			</div>
-				<img class="image" src="images/music_images/black_heart.jpg">
-		</div>
-
-		<div class="grid-item container">
-			<div class="overlay">
-				<div class="text">link</div>
-			</div>
-				<img class="image" src="images/music_images/serpents.jpg">
-		</div>
-
-		<div class="grid-item container">
-			<div class="overlay">
-				<div class="text">link</div>
-			</div>
-				<img class="image" src="images/music_images/clearview.jpg">
-		</div>
-		<div class="grid-item container">
-			<a href="pages/sdsdsd.html">
-			<div class="overlay">
-				<div class="text">Details</div>
+			<a href="php_scripts">	
+			<div class="grid-item">
+				<h2>Php collection</h2>
 			</div>
 			</a>
-			<img class="image" src="images/music_images/sdsdsd.jpg">
-		</div>
-		<a href="pages/le_ceneri.html"><div class="grid-item container">
-			<div class="overlay">
-				<div class="text">Details</div>
-			</div></a>
-				<img class="image" src="images/music_images/le_ceneri.jpg">
-		</div>
-		<div class="grid-item container">
-			<div class="overlay">
-				<div class="text">link</div>
-			</div>
-				<img class="image" src="images/music_images/s4hd.jpg">
-		</div>
-		<div class="grid-item container">
-			<a href="pages/le_vergini_folli.html"><div class="overlay">
-				<div class="text">Details</div>
-			</div></a>
-				<img class="image" src="images/music_images/lvf.jpg">
-		</div>
-		<div class="grid-item container">
-			<div class="overlay">
-				<div class="text">link</div>
-			</div>
-				<img class="image" src="images/music_images/hitparade.jpg">
-		</div>	
+		</a>	
 	</div>
-	<div class="top"><h1>#CANT_KILL_PROGRESS</div>	
+	<div class="top"><h1>#Allem_voran_die_tat</div>		
 </body>
 </html>
